@@ -1,6 +1,6 @@
 Copyright (C) 2009 ASCII MEDIA WORKS.
 Copyright (C) 2006-2010 N. Tsuchimura
-Copyright (C) 2010-2022 Japanese TeX Development Community
+Copyright (C) 2010-2023 Japanese TeX Development Community
 All rights reserved.
 
 Redistribution and use in source and binary forms, with or without
